--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^2.2.8",
+    "axios": "^0.26.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
