--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.26.1",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
