--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.26.1",
+    "pinia": "^2.1.7",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
