--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fudy-shop-web",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --debug",
     "build": "vite build",
     "preview": "vite preview"
   },
